# chip8emulator

./: Cargo.toml  README.md  index.html  main.js  styles.css
pkg/: README.md  emulatorwasm2.d.ts  emulatorwasm2.js  emulatorwasm2_bg.wasm  emulatorwasm2_bg.wasm.d.ts  package.json
src/: audio.rs  graphics.rs  lib.rs  main.rs  shader.wgsl  texture.rs
src/hardware/: mod.rs
src/runtime/: mod.rs
src/util/: mod.rs
